# texture-mapping

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST  README.md  setup.py  texture_mapping.cpp
examples/: color0.txt  color000.txt  color001.txt  color002.txt  color003.txt  color004.txt  color005.txt  color006.txt  color007.txt  color008.txt  color009.txt  color010.txt  color011.txt  color012.txt  color013.txt  color014.txt  color015.txt  color016.txt  color017.txt  color018.txt  color019.txt  color020.txt  color021.txt  color022.txt  color023.txt  color1.txt  color2.txt  color3.txt  color4.txt  color5.txt  color6.txt  color7.txt  obj.ply
texture_mapping/: __init__.py  texture_mapping
texture_mapping/apps/: mapping.py
